--- a/public/themes/brutalist.css
+++ b/public/themes/brutalist.css
@@ -568,9 +568,11 @@
   height: 31px;
 }
 
+[data-theme-id="brutalist"] [data-component="view-switcher-indicator"] {
+  height: 31px;
+}
+
 [data-theme-id="brutalist"] [data-component="todo-segmented"] {
-  padding: 2px;
-  border: 2px solid #000;
   overflow: hidden;
 }
 
